[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "overleaf-bridge"
version = "0.1.0"
description = "Python bridge for fakeleaf.nvim (Overleaf integration)"
authors = [
  { name = "Julien Racette" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "websockets",
  "aiohttp"
]

[project.scripts]
overleaf-bridge = "overleaf_bridge.bridge:main"
