[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fakeleaf-bridge"
version = "0.1.0"
description = "Python bridge for fakeleaf.nvim (Overleaf integration)"
authors = [
  { name = "Julien Racette" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "websockets",
  "aiohttp",
  "cloudscraper",
  "browser-cookie3",
  "beautifulsoup4",
  "requests",
  "pandas",
  "socketio"
]

[project.scripts]
fakeleaf-bridge = "fakeleaf_bridge.main:main"

[tool.setuptools.packages.find]
where = ["src"]
